# strip_controller

./: .cproject  .gitignore  .project  .projectlinkstore  strip_controller.pintool  strip_controller.slcp  strip_controller.slcp.bak  strip_controller.slcp.bak0  strip_controller.slpb  strip_controller.slps  strip_controller_sln.slcw  strip_controller_sln.slpb  vscode.conf
.pdm/: uc.module.setup.CommonProjectPostBuild.com.silabs.ss.framework.project.toolchain.core.default#com.silabs.ss.tool.ide.arm.toolchain.gnu.cdt.12.2.1.20221205.gcc.slsproj  uc.module.setup.componentSetup.com.silabs.ss.framework.project.toolchain.core.default#com.silabs.ss.tool.ide.arm.toolchain.gnu.cdt.12.2.1.20221205.gcc.slsproj  uc.module.setup.ucConfig.com.silabs.ss.framework.project.toolchain.core.default#com.silabs.ss.tool.ide.arm.toolchain.gnu.cdt.12.2.1.20221205.gcc.slsproj  uc.module.setup.ucTemplate.com.silabs.ss.framework.project.toolchain.core.default#com.silabs.ss.tool.ide.arm.toolchain.gnu.cdt.12.2.1.20221205.gcc.slsproj
.uceditor/: .strip_controller.dmadrv.cedit  .strip_controller.emlib_gpio_simple_inittest0.cedit  .strip_controller.emlib_gpio_simple_inittest1.cedit  .strip_controller.pwmWS2812_bit.cedit  .strip_controller.simple_ledled0.cedit  .strip_controller.simple_ledled1.cedit  .strip_controller.spidrvSPI_WS2812.cedit  .strip_controller.spidrvWS2812.cedit
autogen/: .crc_config.crc  gen.properties  linkerfile.ld  sl_component_catalog.h  sl_emlib_gpio_simple_init.c  sl_event_handler.c  sl_pwm_init.c  sl_pwm_instances.h  sl_spidrv_init.c  sl_spidrv_instances.h  sli_mbedtls_config_autogen.h
config/: FreeRTOSConfig.h  FreeRTOSConfig.h.bak  SEGGER_RTT_Conf.h  btl_interface_cfg.h  btl_interface_cfg_s2c4.h  circular_queue_config.h.bak0  pin_config.h  sl_bluetooth_config.h  sl_bt_rtos_config.h  sl_bt_rtos_config.h.bak0  sl_clock_manager_oscillator_config.h  sl_clock_manager_tree_config.h  sl_clock_manager_tree_config.h.bak0  sl_device_init_dcdc_config.h  sl_emlib_gpio_init_test0_config.h  sl_emlib_gpio_init_test1_config.h  sl_emlib_gpio_init_test1_config.h.bak  (+25 more)
strip_controller_cmake/: CMakeLists.txt  CMakePresets.json  strip_controller.cmake  strip_controller_project.cmake
(+37 files in other folders)
